--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "maxmorris",
   "private": false,
+  "homepage": "https://maxwell-morris28.github.io/maxmorris/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
