--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
   "name": "maxmorris",
-  "private": false,
-  "homepage": "https://maxwell-morris28.github.io/maxmorris/",
+  "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-    
+    "preview": "vite preview"
   },
   "dependencies": {
     "node": "^20.4.0",
