--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dig": "0.0.6",
     "node": "^20.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
